--- a/test/src/styles/Product.css
+++ b/test/src/styles/Product.css
@@ -12,7 +12,6 @@
   }
   .productImage {
     max-width: 50%;
-    /* max-height: 100%; */
     max-height: 500px;
     border-radius: 5px;
     margin-right: 20px;
@@ -51,13 +50,23 @@
     cursor: pointer;
     margin-bottom: 10px;
   }
+  #add-to-wishlist-test {
+    background-color: pink;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    font-family: "Lucida Console", Courier, monospace;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-bottom: 10px;
+  }
+
   .desc {
     margin-top: 120vh;
     padding: 20px;
     background: #f9f9f9;
     color: black;
     border-radius: 10px;
-    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);*/
     font-family: "Lucida Console", Courier, monospace;
     width: 100%;
     max-width: 90%;
